# temporal-community-detection

./: .gitignore  README.md  pyproject.toml  report.tex  requirements.txt
data/processed/: enron_node_mapping.pt  enron_temporal.pt
data/raw/: enron_mail.url
scripts/: preprocess_enron.py  train_and_compare.py  train_overlapping_gnn.py  train_tcda_ne.py
src/tcd/data/: enron_mail.py  loader.py  snapshots.py
src/tcd/evaluation/: __init__.py  metrics.py
src/tcd/models/: __init__.py
src/tcd/models/overlapping_gnn/: __init__.py  model.py
src/tcd/models/overlapping_gnn/nocd/: sampler.py  utils.py
src/tcd/models/overlapping_gnn/nocd/metrics/: supervised.py  unsupervised.py
src/tcd/models/overlapping_gnn/nocd/nn/: gcn.py  imrpoved_gcn.py
src/tcd/models/tcda_ne/: __init__.py  model.py
